--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@ about_profile_image: images/headshot_small.JPG
 about_content: | # this will include new lines to allow paragraphs
   Hi, I'm Honoka.
 
-  I'm a recent graduate of the University of Notre Dame with a combined background in Applied Math, Statistics, and Education.
-  With several internship experiences in data science and analytics, as well as research experience in educational measurement and assessment, I am passionate about the use of data-driven approaches to tackle problems in education and to improve student learning.
+  I'm a recent graduate of the University of Notre Dame with a combined background in applied math, statistics, and education.
+  With industry experience in data science and analytics, as well as research experience in educational measurement and assessment, I am passionate about the use of data-driven approaches to tackle problems in education and to improve student learning.
   Broadly, my interests lie at the intersection of education and data science or statistics, including topics such as educational data mining, educational statistics, learning analytics, and edtech. 
   
   In my free time, I enjoy healthy baking, making fashion illustrations, and going on picnics. 
 
 # Projects Section
-projects_title: Some Projects (Undergraduate)
+projects_title: Undergraduate Projects
 
 # Experience Section
 experience_title: Relevant Experience
@@ -37,6 +37,8 @@ educaton_title: Education
 more_title: Publications and Presentations
 more_content: | # this will include new lines to allow paragraphs
   - Suzuki, H., Hong, M., Ober, T., & Cheng, Y. (2020). Applying Machine Learning to Predict Differences between Learning Outcomes. Under Review.
+  
+  - Ober, T. M., Coggins, M. R., Rebouças-Ju, D., Suzuki, H., & Cheng, Y. (in press). Effect of teacher support on students’ math attitudes: Measurement and moderation of students’ background characteristics. Contemporary Educational Psychology.
 
   - Suzuki, H., Hong, M., Ober, T., & Cheng, Y. (2020, Mar 20–22). Machine Learning on Student Learning: Modeling Differences Between Various Student Learning Outcomes in AP Statistics Classrooms [Poster Session 1]. ACC Meeting of the Minds Conference at the University of North Carolina, Chapel Hill, NC, United States. https://accmom2020.web.unc.edu/ (Conference canceled due to COVID-19)
 
