--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,39 +1,39 @@
-- layout: top-middle
-  company: EF Education First
-  link: www.ef.edu/
-  job_title: Data Science Intern --> Data Scientist
-  dates: Summer 2019 --> Jul 2020 - Present
-  description: | # this will include new lines to allow paragraphs
-    Internship projects included creating an interactive summary dashboard to display student survey responses, building a classification model for identifying target schools for sales calls, and giving a presentation on insghts gained from an open-ended analysis on traveler cancellation patterns. 
+#- layout: top-middle
+#  company: EF Education First
+#  link: www.ef.edu/
+#  job_title: Data Science Intern --> Data Scientist
+#  dates: Summer 2019 --> Jul 2020 - Present
+#  description: | # this will include new lines to allow paragraphs
+#    Internship projects included creating an interactive summary dashboard to display student survey responses, building a classification model for identifying target schools for sales calls, and giving a presentation on insghts gained from an open-ended analysis on traveler cancellation patterns. 
     
-    Programs used: <mark>R</mark> <mark>Python</mark> <mark>Power BI</mark> <mark>SQL</mark>
+#    Programs used: <mark>R</mark> <mark>Python</mark> <mark>Power BI</mark> <mark>SQL</mark>
     
-- layout: top-middle
-  company: Learning Analytics and Measurement in Behavioral Sciences Lab
-  link: lambslab.nd.edu/
-  job_title: Undergraduate Research Assistant
-  dates: Sep 2017 - May 2020
-  description: | # this will include new lines to allow paragraphs
-    The research lab is focused on measurement issues in psychological and educationl assessment, with a focus on AP Statistics students. Topics studied included factor analysis, scale development and validation, computerized adaptive testing, and low- and high-stakes assessment. Day-to-day tasks as a research assistant included data cleaning, running statistical analyses, conducting literature reviews, documenting research methods/findings, and providing peer feedback on academic manuscripts. 
+#- layout: top-middle
+#  company: Learning Analytics and Measurement in Behavioral Sciences Lab
+#  link: lambslab.nd.edu/
+#  job_title: Undergraduate Research Assistant
+#  dates: Sep 2017 - May 2020
+#  description: | # this will include new lines to allow paragraphs
+#    The research lab is focused on measurement issues in psychological and educationl assessment, with a focus on AP Statistics students. Topics studied included factor analysis, scale development and validation, computerized adaptive testing, and low- and high-stakes assessment. Day-to-day tasks as a research assistant included data cleaning, running statistical analyses, conducting literature reviews, documenting research methods/findings, and providing peer feedback on academic manuscripts. 
     
-    Programs used: <mark>R</mark>
+#    Programs used: <mark>R</mark>
     
-- layout: top-middle
-  company: Academic Technologies Lab of Notre Dame
-  job_title: Data Analyst
-  dates: Sep 2019 - May 2020
-  description: | # this will include new lines to allow paragraphs
-    In collaboration with Density (https://www.density.io/), the lab aimed to implement Density occupancy sensors in various locations of Notre Dame's campus, with the ultimate goal of influencing student behavior by providing students with access to real-time occupancy data. My role in this project was to conduct an internal study to assess the accuracy of the sensors in the dining halls and to help design and build a dashboard displaying real-time data that is accessible to ND students. The project involved technical tasks such as data collection, data cleaning, statistical reliability analysis, and creating data visualizations. 
-    In addition, I regularly met with the dining hall staff and representatives from Density to obtain data, ask questions, receive feedback, and report findings. 
+#- layout: top-middle
+#  company: Academic Technologies Lab of Notre Dame
+#  job_title: Data Analyst
+#  dates: Sep 2019 - May 2020
+#  description: | # this will include new lines to allow paragraphs
+#    In collaboration with Density (https://www.density.io/), the lab aimed to implement Density occupancy sensors in various locations of Notre Dame's campus, with the ultimate goal of influencing student behavior by providing students with access to real-time occupancy data. My role in this project was to conduct an internal study to assess the accuracy of the sensors in the dining halls and to help design and build a dashboard displaying real-time data that is accessible to ND students. The project involved technical tasks such as data collection, data cleaning, statistical reliability analysis, and creating data visualizations. 
+#    In addition, I regularly met with the dining hall staff and representatives from Density to obtain data, ask questions, receive feedback, and report findings. 
     
-    Programs used: <mark>R</mark> <mark>Tableau</mark>
+#    Programs used: <mark>R</mark> <mark>Tableau</mark>
         
-- layout: top-middle
-  company: Performance Analytics Team of Notre Dame Athletics
-  job_title: Undergraduate Research Assistant
-  dates: May 2018 - May 2020
-  description: | # this will include new lines to allow paragraphs
-    Projects included statistical reliability studies done on various athletic equipment (motion capture systems, wearable technologies), an imputation algorithm development for missing athlete training data, and Bayesian variance component estimation for repeated performance measures. 
-    In addition, I cleaned and updated team data stored in the SQL database, conducted literature reviews on sports science research, and communicated findings of my projects with the Athletics staff.  
+#- layout: top-middle
+#  company: Performance Analytics Team of Notre Dame Athletics
+#  job_title: Undergraduate Research Assistant
+#  dates: May 2018 - May 2020
+#  description: | # this will include new lines to allow paragraphs
+#    Projects included statistical reliability studies done on various athletic equipment (motion capture systems, wearable technologies), an imputation algorithm development for missing athlete training data, and Bayesian variance component estimation for repeated performance measures. 
+#    In addition, I cleaned and updated team data stored in the SQL database, conducted literature reviews on sports science research, and communicated findings of my projects with the Athletics staff.  
     
-    Programs used: <mark>R</mark> <mark>Shiny</mark> <mark>SQL</mark> <mark>Tableau</mark> <mark>Stan</mark>   
+#    Programs used: <mark>R</mark> <mark>Shiny</mark> <mark>SQL</mark> <mark>Tableau</mark> <mark>Stan</mark>   
