--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,8 @@
+- layout: top-middle
+  name: Online CV
+  link: https://honokasuzuki.github.io/academic
+  github: honokasuzuki.github.io/academic
+
 #- layout: top-middle
 #  name: Text Analysis on Academy Awards Acceptance Speeches - Actors vs. Actresses
 #  link: github.com/honokasuzuki/academy-awards
