--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,5 +1,5 @@
 - layout: top-middle
-  name: Online CV
+  name: Please follow link below for my online profile/CV!
   link: https://honokasuzuki.github.io/academic
   github: honokasuzuki
 
