--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ linkedin_username: honoka-suzuki
 
 # About Section
 # about_title: About Me
-# about_profile_image: images/headshot_small.JPG
+about_profile_image: images/headshot_small.JPG
 about_content: | # this will include new lines to allow paragraphs
   Hi, thanks for visiting! 
   
