--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,7 @@ about_content: | # this will include new lines to allow paragraphs
   Hi, thanks for visiting! 
   
   I am a Ph.D. student in Quantitative Psychology at the University of North Carolina at Chapel Hill. Prior to starting my Ph.D. program, I worked as a data scientist at an 
-  international education company and obtained my B.S. in Applied Math and Statistics from the University of Notre Dame. My interests revolve around machine learning,  
-  psychometrics, and anything that involves quantitative analysis of social science data.
+  international education company and obtained my B.S. in Applied Math and Statistics from the University of Notre Dame. My interests revolve around machine learning, psychometrics, and anything that involves quantitative analysis of social science data.
   
   In my free time, I enjoy (healthy) baking, going on picnics, and making fashion illustrations.
 
