--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ favicon: images/favicon.ico
 
 # Personal info
 name: Honoka Suzuki
-title: PhD Student
+title: PhD Student at UNC-Chapel Hill
 email: hsuzuki AT unc DOT edu
 website: https://honokasuzuki.github.io/academic
 
