--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ favicon: images/favicon.ico
 
 # Personal info
 name: Honoka Suzuki
-title: PhD Student at UNC-Chapel Hill
+title: 
 email: hsuzuki AT unc DOT edu
 website: https://honokasuzuki.github.io/academic
 
@@ -14,14 +14,14 @@ linkedin_username: honoka-suzuki
 
 # About Section
 # about_title: About Me
-about_profile_image: images/headshot_small.JPG
+about_profile_image: 
 about_content: | # this will include new lines to allow paragraphs
   Hi, thanks for visiting! 
   
   I am a Ph.D. student in Quantitative Psychology at the University of North Carolina at Chapel Hill. Prior to starting my Ph.D. program, I worked as a data scientist at an 
-  international education company and obtained my B.S. in Applied Math and Statistics from the University of Notre Dame. My interests revolve around machine learning, psychometrics, and anything that involves quantitative analysis of social science data.
+  international education company and obtained my B.S. in Applied Math and Statistics from the University of Notre Dame. My interests revolve around machine learning and psychometrics.
   
-  In my free time, I enjoy (healthy) baking, reading, going on picnics, and making fashion illustrations.
+  In my free time, I enjoy (healthy) baking, reading, and going on picnics.
 
 
 # Projects Section
