--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,11 @@ github_username:  honokasuzuki
 linkedin_username: honoka-suzuki
 
 # About Section
-# about_title: About Me
+# about_title: Hi there!
 about_profile_image: 
 about_content: | # this will include new lines to allow paragraphs
+
+Thanks for visiting. This page is no longer active. Please see below for my updated personal website. 
 
 # Projects Section
 projects_title: GitHub Pages
