--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ github_username:  honokasuzuki
 linkedin_username: honoka-suzuki
 
 # About Section
-# about_title: Hi there!
+about_title: Hi there!
 about_profile_image: 
 about_content: | # this will include new lines to allow paragraphs
 
