--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ favicon: images/favicon.ico
 # Personal info
 name: Honoka Suzuki
 title: PhD Student
-email: hsuzuki AT unc DOT edu
+# email: hsuzuki AT unc DOT edu
 website: https://honokasuzuki.github.io/academic
 
 # Social links
