--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ linkedin_username: honoka-suzuki
 
 # About Section
 about_title: Hi there!
-about_profile_image: 
+# about_profile_image: 
 about_content: | # this will include new lines to allow paragraphs
 
 Thanks for visiting. This page is no longer active. Please see below for my updated personal website. 
