--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ favicon: images/favicon.ico
 # Personal info
 name: Honoka Suzuki
 title: PhD Student
-# email: hsuzuki AT unc DOT edu
+email: hsuzuki AT unc DOT edu
 website: https://honokasuzuki.github.io/academic
 
 # Social links
@@ -20,7 +20,7 @@ about_content: | # this will include new lines to allow paragraphs
   Thanks for visiting. This page is no longer active. Please see below for my updated personal website. 
 
 # Projects Section
-projects_title: GitHub Pages
+projects_title:  
 
 # Experience Section
 experience_title: Relevant Experience
