--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ about_content: | # this will include new lines to allow paragraphs
   Thanks for visiting. This page is no longer active. Please see below for my updated personal website. 
 
 # Projects Section
-projects_title:  
+projects_title: GitHub Pages 
 
 # Experience Section
 experience_title: Relevant Experience
